--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+  - images/vagabond1.jpg
+  - images/vagabond2.jpg
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
